# MatrixShell

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
demo/: Makefile  fake_terminal_demo.sh  matrixsh-demo.cast  powershell_demo.txt  record_asciinema.sh
docs/: AGENT_DESIGN_ANALYSIS.md  CATALOG_GUIDE.md  DEMO.md  FAQ.md  MCP_SERVER_GUIDE.md  MCP_SERVER_PROPOSAL.md
packaging/homebrew/: README.md  matrixsh.rb
packaging/linux/: README.md  build_linux_packages.sh
packaging/winget/: README.md  manifest.yaml
scripts/: build_all.sh  build_exe.ps1
src/matrixsh/: cli.py  config.py  env.py  gateway.py  history.py  install.py  llm.py  mcp_register.py  mcp_server.py  pair.py  safety.py  shell.py  terminal.py  tool_ui.py  urls.py
src/matrixsh/catalog/: __init__.py  client.py  commands.py  sync.py
src/matrixsh/mcp/: __init__.py  registry.py  server.py
src/matrixsh/plugins/: __init__.py  admin.py  broker.py  connector.py  manager.py  models.py
src/matrixsh/plugins/providers/: __init__.py  cforge_admin.py  contextforge.py
tests/: __init__.py  test_catalog_client.py  test_catalog_sync.py  test_connector.py  test_plugin_models.py
